<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner_fortal"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/cidade_fortaleza" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/banner_fortal"
            android:layout_alignLeft="@+id/banner_fortal"
            android:layout_alignStart="@id/banner_fortal"
            android:background="#6000"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:text="@string/title_home"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/opt_places"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:onClick="BestPlacesActv">

                <ImageView
                    android:id="@+id/img_places"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:src="@drawable/ic_beach" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_places"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/places"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/opt_restaurants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:onClick="RestaurantsActv">

                <ImageView
                    android:id="@+id/img_restaurants"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:src="@drawable/ic_restaurant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_restaurants"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/restaurants"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/opt_hotels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:onClick="HotelsActv">

                <ImageView
                    android:id="@+id/img_hotels"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:src="@drawable/ic_hotel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_hotels"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/hotels"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/opt_social"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:onClick="SocialActv">

                <ImageView
                    android:id="@+id/img_social"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:src="@drawable/ic_social" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_social"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/nightlife"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>